tests/NormalTests/paczka1/small_fuzzy/80550867.err
Error in line 1: e21U7Aem A271 23,0
Error in line 4: S360 A271 -1,3
Error in line 3: S360 A271 14,0
Error in line 12: S360 S363 61,8
Error in line 8: 0hVV S363 22,5
